Projet GL/Projet_GL/src/test/deca/context/invalid/increment7/cast-bool-to-int.deca
//Rule : 3.39

//Resultats : can't cast a boolean into an integer

// Historique : cree le 09/01/2023


{
    int a;
    boolean b = true;

    //Must be refused
    a = (int) b;
}